# LudoLingua

./: .gitignore  ARCHITECTURE.md  BACKEND_STRUCTURE.md  CHANGELOG.md  CommonEvents.json  DESIGN.md  FRONTEND_STRUCTURE.md  PROGRESS.MD  README.md  ROADMAP.md  TODO.md  glossary_ja_en (1).json  glossary_ja_en.json  ludollingua-settings.json  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  translations_NANAOYA_HYPNOAPP_2025-08-10.json
app/: app.config.ts  (+1 more)
src-tauri/: 2  Cargo.toml  ludolingua.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_create_glossary_terms.sql  0002_glossary_unique_index.sql  0003_create_text_units.sql  0004_fix_text_units_uniqueness.sql
src-tauri/models/: groq.json  language.json  ollama.json  openai.json  openrouter.json  runpod.json
src-tauri/prompts/: basic.txt  character.txt  class.txt  description.txt  dialogue.txt  equipment.txt  erobasic.txt  item.txt  other.txt  skill.txt  state.txt  system.txt  vocabularies.txt  weapon.txt
src-tauri/prompts/optimized/: basic.txt  character.txt  class.txt  dialogue.txt  equipment.txt  other.txt  skill.txt  state.txt  system.txt  vocabularies.txt
src-tauri/src/: lib.rs
src-tauri/src/commands/: engine.rs  glossary.rs  handler.rs  languages.rs  mod.rs  provider.rs  translation.rs  translations.rs  translator.rs  updater.rs
src-tauri/src/core/: engine.rs  error.rs  mod.rs  provider.rs
src-tauri/src/db/: mod.rs  state.rs
src-tauri/src/engines/: common.rs  factory.rs  mod.rs
src-tauri/src/glossaries/: mod.rs  model.rs  repo.rs  state.rs
(+218 files in other folders)
